parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    ERROR
    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> basic_block
Rule 3     basic_block -> stmt_list
Rule 4     func_declaration -> FUNCTION datatype id LPAREN params RPAREN LBRACE basic_block RBRACE
Rule 5     stmt_list -> stmt_list statement
Rule 6     stmt_list -> statement
Rule 7     statement -> expr SEMI
Rule 8     statement -> var_declaration
Rule 9     statement -> return
Rule 10    statement -> assign
Rule 11    statement -> func_declaration
Rule 12    statement -> struct_declaration
Rule 13    statement -> while
Rule 14    statement -> BREAK SEMI
Rule 15    statement -> CONTINUE SEMI
Rule 16    statement -> GOTO ID SEMI
Rule 17    statement -> goto_mark
Rule 18    statement -> if-else
Rule 19    while -> WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE
Rule 20    while -> DO LBRACE stmt_list RBRACE WHILE LPAREN expr RPAREN SEMI
Rule 21    if-else -> IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
Rule 22    if-else -> IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
Rule 23    struct_declaration -> STRUCTURE id LBRACE struct_params RBRACE
Rule 24    struct_params -> struct_param
Rule 25    struct_params -> struct_params COMMA struct_param
Rule 26    struct_param -> DATATYPE ID
Rule 27    struct_param -> func_declaration
Rule 28    params -> <empty>
Rule 29    params -> param
Rule 30    params -> params COMMA param
Rule 31    param -> DATATYPE ID
Rule 32    expr -> ID LPAREN args RPAREN
Rule 33    args -> <empty>
Rule 34    args -> expr
Rule 35    args -> args COMMA expr
Rule 36    var_declaration -> datatype id EQUALS expr SEMI
Rule 37    var_declaration -> datatype id SEMI
Rule 38    var_declaration -> ID id EQUALS LBRACE args RBRACE SEMI
Rule 39    assign -> ID EQUALS expr SEMI
Rule 40    assign -> ID EQUALS LBRACE args RBRACE SEMI
Rule 41    assign -> ID DOT ID EQUALS expr SEMI
Rule 42    return -> RETURN expr SEMI
Rule 43    return -> RETURN SEMI
Rule 44    expr -> expr PLUS expr
Rule 45    expr -> expr MINUS expr
Rule 46    expr -> expr MUL expr
Rule 47    expr -> expr DIVIDE expr
Rule 48    expr -> expr INTDIVIDE expr
Rule 49    expr -> expr MODULO expr
Rule 50    expr -> expr POW expr
Rule 51    expr -> expr LE expr
Rule 52    expr -> expr GE expr
Rule 53    expr -> expr LT expr
Rule 54    expr -> expr GT expr
Rule 55    expr -> expr EQ expr
Rule 56    expr -> expr NE expr
Rule 57    expr -> MINUS expr
Rule 58    expr -> expr LAND expr
Rule 59    expr -> expr LOR expr
Rule 60    expr -> LNOT expr
Rule 61    expr -> expr BAND expr
Rule 62    expr -> expr BOR expr
Rule 63    expr -> id
Rule 64    expr -> int
Rule 65    expr -> double
Rule 66    expr -> bool
Rule 67    expr -> str
Rule 68    expr -> void
Rule 69    expr -> NULL
Rule 70    expr -> LPAREN expr RPAREN
Rule 71    int -> INTEGER
Rule 72    double -> DOUBLE
Rule 73    bool -> BOOL
Rule 74    str -> STRING
Rule 75    void -> VOID
Rule 76    expr -> datatype LBRACKET RBRACKET id
Rule 77    expr -> datatype LBRACKET RBRACKET id EQUALS datatype LBRACKET INTEGER RBRACKET
Rule 78    expr -> ID LBRACKET expr RBRACKET
Rule 79    goto_mark -> ID COLON
Rule 80    datatype -> DATATYPE
Rule 81    id -> ID

Terminals, with rules where they appear

BAND                 : 61
BOOL                 : 73
BOR                  : 62
BREAK                : 14
COLON                : 79
COMMA                : 25 30 35
COMMENT              : 
CONTINUE             : 15
DATATYPE             : 26 31 80
DIVIDE               : 47
DO                   : 20
DOT                  : 41
DOUBLE               : 72
ELSE                 : 22
EQ                   : 55
EQUALS               : 36 38 39 40 41 77
ERROR                : 
FUNCTION             : 4
GE                   : 52
GOTO                 : 16
GT                   : 54
ID                   : 16 26 31 32 38 39 40 41 41 78 79 81
IF                   : 21 22
INTDIVIDE            : 48
INTEGER              : 71 77
LAND                 : 58
LBRACE               : 4 19 20 21 22 22 23 38 40
LBRACKET             : 76 77 77 78
LE                   : 51
LNOT                 : 60
LOR                  : 59
LPAREN               : 4 19 20 21 22 32 70
LT                   : 53
MINUS                : 45 57
MODULO               : 49
MUL                  : 46
NE                   : 56
NEWLINE              : 
NULL                 : 69
PLUS                 : 44
POW                  : 50
RBRACE               : 4 19 20 21 22 22 23 38 40
RBRACKET             : 76 77 77 78
RETURN               : 42 43
RPAREN               : 4 19 20 21 22 32 70
SEMI                 : 7 14 15 16 20 36 37 38 39 40 41 42 43
STRING               : 74
STRUCTURE            : 23
VOID                 : 75
WHILE                : 19 20
error                : 

Nonterminals, with rules where they appear

args                 : 32 35 38 40
assign               : 10
basic_block          : 2 4
bool                 : 66
datatype             : 4 36 37 76 77 77
double               : 65
expr                 : 7 19 20 21 22 34 35 36 39 41 42 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 58 59 59 60 61 61 62 62 70 78
func_declaration     : 11 27
goto_mark            : 17
id                   : 4 23 36 37 38 63 76 77
if-else              : 18
int                  : 64
param                : 29 30
params               : 4 30
program              : 0
return               : 9
statement            : 5 6
stmt_list            : 3 5 19 20 21 22 22
str                  : 67
struct_declaration   : 12
struct_param         : 24 25
struct_params        : 23 25
var_declaration      : 8
void                 : 68
while                : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . basic_block
    (3) basic_block -> . stmt_list
    (5) stmt_list -> . stmt_list statement
    (6) stmt_list -> . statement
    (7) statement -> . expr SEMI
    (8) statement -> . var_declaration
    (9) statement -> . return
    (10) statement -> . assign
    (11) statement -> . func_declaration
    (12) statement -> . struct_declaration
    (13) statement -> . while
    (14) statement -> . BREAK SEMI
    (15) statement -> . CONTINUE SEMI
    (16) statement -> . GOTO ID SEMI
    (17) statement -> . goto_mark
    (18) statement -> . if-else
    (32) expr -> . ID LPAREN args RPAREN
    (44) expr -> . expr PLUS expr
    (45) expr -> . expr MINUS expr
    (46) expr -> . expr MUL expr
    (47) expr -> . expr DIVIDE expr
    (48) expr -> . expr INTDIVIDE expr
    (49) expr -> . expr MODULO expr
    (50) expr -> . expr POW expr
    (51) expr -> . expr LE expr
    (52) expr -> . expr GE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr GT expr
    (55) expr -> . expr EQ expr
    (56) expr -> . expr NE expr
    (57) expr -> . MINUS expr
    (58) expr -> . expr LAND expr
    (59) expr -> . expr LOR expr
    (60) expr -> . LNOT expr
    (61) expr -> . expr BAND expr
    (62) expr -> . expr BOR expr
    (63) expr -> . id
    (64) expr -> . int
    (65) expr -> . double
    (66) expr -> . bool
    (67) expr -> . str
    (68) expr -> . void
    (69) expr -> . NULL
    (70) expr -> . LPAREN expr RPAREN
    (76) expr -> . datatype LBRACKET RBRACKET id
    (77) expr -> . datatype LBRACKET RBRACKET id EQUALS datatype LBRACKET INTEGER RBRACKET
    (78) expr -> . ID LBRACKET expr RBRACKET
    (36) var_declaration -> . datatype id EQUALS expr SEMI
    (37) var_declaration -> . datatype id SEMI
    (38) var_declaration -> . ID id EQUALS LBRACE args RBRACE SEMI
    (42) return -> . RETURN expr SEMI
    (43) return -> . RETURN SEMI
    (39) assign -> . ID EQUALS expr SEMI
    (40) assign -> . ID EQUALS LBRACE args RBRACE SEMI
    (41) assign -> . ID DOT ID EQUALS expr SEMI
    (4) func_declaration -> . FUNCTION datatype id LPAREN params RPAREN LBRACE basic_block RBRACE
    (23) struct_declaration -> . STRUCTURE id LBRACE struct_params RBRACE
    (19) while -> . WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (20) while -> . DO LBRACE stmt_list RBRACE WHILE LPAREN expr RPAREN SEMI
    (79) goto_mark -> . ID COLON
    (21) if-else -> . IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (22) if-else -> . IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
    (81) id -> . ID
    (71) int -> . INTEGER
    (72) double -> . DOUBLE
    (73) bool -> . BOOL
    (74) str -> . STRING
    (75) void -> . VOID
    (80) datatype -> . DATATYPE

    $end            reduce using rule 1 (program -> .)
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    GOTO            shift and go to state 14
    ID              shift and go to state 15
    MINUS           shift and go to state 19
    LNOT            shift and go to state 20
    NULL            shift and go to state 27
    LPAREN          shift and go to state 18
    RETURN          shift and go to state 30
    FUNCTION        shift and go to state 31
    STRUCTURE       shift and go to state 32
    WHILE           shift and go to state 33
    DO              shift and go to state 34
    IF              shift and go to state 35
    INTEGER         shift and go to state 29
    DOUBLE          shift and go to state 36
    BOOL            shift and go to state 37
    STRING          shift and go to state 38
    VOID            shift and go to state 39
    DATATYPE        shift and go to state 40

    program                        shift and go to state 1
    basic_block                    shift and go to state 2
    stmt_list                      shift and go to state 3
    statement                      shift and go to state 4
    expr                           shift and go to state 5
    var_declaration                shift and go to state 6
    return                         shift and go to state 7
    assign                         shift and go to state 8
    func_declaration               shift and go to state 9
    struct_declaration             shift and go to state 10
    while                          shift and go to state 11
    goto_mark                      shift and go to state 16
    if-else                        shift and go to state 17
    id                             shift and go to state 21
    int                            shift and go to state 22
    double                         shift and go to state 23
    bool                           shift and go to state 24
    str                            shift and go to state 25
    void                           shift and go to state 26
    datatype                       shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (2) program -> basic_block .

    $end            reduce using rule 2 (program -> basic_block .)


state 3

    (3) basic_block -> stmt_list .
    (5) stmt_list -> stmt_list . statement
    (7) statement -> . expr SEMI
    (8) statement -> . var_declaration
    (9) statement -> . return
    (10) statement -> . assign
    (11) statement -> . func_declaration
    (12) statement -> . struct_declaration
    (13) statement -> . while
    (14) statement -> . BREAK SEMI
    (15) statement -> . CONTINUE SEMI
    (16) statement -> . GOTO ID SEMI
    (17) statement -> . goto_mark
    (18) statement -> . if-else
    (32) expr -> . ID LPAREN args RPAREN
    (44) expr -> . expr PLUS expr
    (45) expr -> . expr MINUS expr
    (46) expr -> . expr MUL expr
    (47) expr -> . expr DIVIDE expr
    (48) expr -> . expr INTDIVIDE expr
    (49) expr -> . expr MODULO expr
    (50) expr -> . expr POW expr
    (51) expr -> . expr LE expr
    (52) expr -> . expr GE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr GT expr
    (55) expr -> . expr EQ expr
    (56) expr -> . expr NE expr
    (57) expr -> . MINUS expr
    (58) expr -> . expr LAND expr
    (59) expr -> . expr LOR expr
    (60) expr -> . LNOT expr
    (61) expr -> . expr BAND expr
    (62) expr -> . expr BOR expr
    (63) expr -> . id
    (64) expr -> . int
    (65) expr -> . double
    (66) expr -> . bool
    (67) expr -> . str
    (68) expr -> . void
    (69) expr -> . NULL
    (70) expr -> . LPAREN expr RPAREN
    (76) expr -> . datatype LBRACKET RBRACKET id
    (77) expr -> . datatype LBRACKET RBRACKET id EQUALS datatype LBRACKET INTEGER RBRACKET
    (78) expr -> . ID LBRACKET expr RBRACKET
    (36) var_declaration -> . datatype id EQUALS expr SEMI
    (37) var_declaration -> . datatype id SEMI
    (38) var_declaration -> . ID id EQUALS LBRACE args RBRACE SEMI
    (42) return -> . RETURN expr SEMI
    (43) return -> . RETURN SEMI
    (39) assign -> . ID EQUALS expr SEMI
    (40) assign -> . ID EQUALS LBRACE args RBRACE SEMI
    (41) assign -> . ID DOT ID EQUALS expr SEMI
    (4) func_declaration -> . FUNCTION datatype id LPAREN params RPAREN LBRACE basic_block RBRACE
    (23) struct_declaration -> . STRUCTURE id LBRACE struct_params RBRACE
    (19) while -> . WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (20) while -> . DO LBRACE stmt_list RBRACE WHILE LPAREN expr RPAREN SEMI
    (79) goto_mark -> . ID COLON
    (21) if-else -> . IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (22) if-else -> . IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
    (81) id -> . ID
    (71) int -> . INTEGER
    (72) double -> . DOUBLE
    (73) bool -> . BOOL
    (74) str -> . STRING
    (75) void -> . VOID
    (80) datatype -> . DATATYPE

    $end            reduce using rule 3 (basic_block -> stmt_list .)
    RBRACE          reduce using rule 3 (basic_block -> stmt_list .)
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    GOTO            shift and go to state 14
    ID              shift and go to state 15
    MINUS           shift and go to state 19
    LNOT            shift and go to state 20
    NULL            shift and go to state 27
    LPAREN          shift and go to state 18
    RETURN          shift and go to state 30
    FUNCTION        shift and go to state 31
    STRUCTURE       shift and go to state 32
    WHILE           shift and go to state 33
    DO              shift and go to state 34
    IF              shift and go to state 35
    INTEGER         shift and go to state 29
    DOUBLE          shift and go to state 36
    BOOL            shift and go to state 37
    STRING          shift and go to state 38
    VOID            shift and go to state 39
    DATATYPE        shift and go to state 40

    statement                      shift and go to state 41
    expr                           shift and go to state 5
    var_declaration                shift and go to state 6
    return                         shift and go to state 7
    assign                         shift and go to state 8
    func_declaration               shift and go to state 9
    struct_declaration             shift and go to state 10
    while                          shift and go to state 11
    goto_mark                      shift and go to state 16
    if-else                        shift and go to state 17
    id                             shift and go to state 21
    int                            shift and go to state 22
    double                         shift and go to state 23
    bool                           shift and go to state 24
    str                            shift and go to state 25
    void                           shift and go to state 26
    datatype                       shift and go to state 28

state 4

    (6) stmt_list -> statement .

    BREAK           reduce using rule 6 (stmt_list -> statement .)
    CONTINUE        reduce using rule 6 (stmt_list -> statement .)
    GOTO            reduce using rule 6 (stmt_list -> statement .)
    ID              reduce using rule 6 (stmt_list -> statement .)
    MINUS           reduce using rule 6 (stmt_list -> statement .)
    LNOT            reduce using rule 6 (stmt_list -> statement .)
    NULL            reduce using rule 6 (stmt_list -> statement .)
    LPAREN          reduce using rule 6 (stmt_list -> statement .)
    RETURN          reduce using rule 6 (stmt_list -> statement .)
    FUNCTION        reduce using rule 6 (stmt_list -> statement .)
    STRUCTURE       reduce using rule 6 (stmt_list -> statement .)
    WHILE           reduce using rule 6 (stmt_list -> statement .)
    DO              reduce using rule 6 (stmt_list -> statement .)
    IF              reduce using rule 6 (stmt_list -> statement .)
    INTEGER         reduce using rule 6 (stmt_list -> statement .)
    DOUBLE          reduce using rule 6 (stmt_list -> statement .)
    BOOL            reduce using rule 6 (stmt_list -> statement .)
    STRING          reduce using rule 6 (stmt_list -> statement .)
    VOID            reduce using rule 6 (stmt_list -> statement .)
    DATATYPE        reduce using rule 6 (stmt_list -> statement .)
    $end            reduce using rule 6 (stmt_list -> statement .)
    RBRACE          reduce using rule 6 (stmt_list -> statement .)


state 5

    (7) statement -> expr . SEMI
    (44) expr -> expr . PLUS expr
    (45) expr -> expr . MINUS expr
    (46) expr -> expr . MUL expr
    (47) expr -> expr . DIVIDE expr
    (48) expr -> expr . INTDIVIDE expr
    (49) expr -> expr . MODULO expr
    (50) expr -> expr . POW expr
    (51) expr -> expr . LE expr
    (52) expr -> expr . GE expr
    (53) expr -> expr . LT expr
    (54) expr -> expr . GT expr
    (55) expr -> expr . EQ expr
    (56) expr -> expr . NE expr
    (58) expr -> expr . LAND expr
    (59) expr -> expr . LOR expr
    (61) expr -> expr . BAND expr
    (62) expr -> expr . BOR expr

    SEMI            shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    MUL             shift and go to state 45
    DIVIDE          shift and go to state 46
    INTDIVIDE       shift and go to state 47
    MODULO          shift and go to state 48
    POW             shift and go to state 49
    LE              shift and go to state 50
    GE              shift and go to state 51
    LT              shift and go to state 52
    GT              shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LAND            shift and go to state 56
    LOR             shift and go to state 57
    BAND            shift and go to state 58
    BOR             shift and go to state 59


state 6

    (8) statement -> var_declaration .

    BREAK           reduce using rule 8 (statement -> var_declaration .)
    CONTINUE        reduce using rule 8 (statement -> var_declaration .)
    GOTO            reduce using rule 8 (statement -> var_declaration .)
    ID              reduce using rule 8 (statement -> var_declaration .)
    MINUS           reduce using rule 8 (statement -> var_declaration .)
    LNOT            reduce using rule 8 (statement -> var_declaration .)
    NULL            reduce using rule 8 (statement -> var_declaration .)
    LPAREN          reduce using rule 8 (statement -> var_declaration .)
    RETURN          reduce using rule 8 (statement -> var_declaration .)
    FUNCTION        reduce using rule 8 (statement -> var_declaration .)
    STRUCTURE       reduce using rule 8 (statement -> var_declaration .)
    WHILE           reduce using rule 8 (statement -> var_declaration .)
    DO              reduce using rule 8 (statement -> var_declaration .)
    IF              reduce using rule 8 (statement -> var_declaration .)
    INTEGER         reduce using rule 8 (statement -> var_declaration .)
    DOUBLE          reduce using rule 8 (statement -> var_declaration .)
    BOOL            reduce using rule 8 (statement -> var_declaration .)
    STRING          reduce using rule 8 (statement -> var_declaration .)
    VOID            reduce using rule 8 (statement -> var_declaration .)
    DATATYPE        reduce using rule 8 (statement -> var_declaration .)
    $end            reduce using rule 8 (statement -> var_declaration .)
    RBRACE          reduce using rule 8 (statement -> var_declaration .)


state 7

    (9) statement -> return .

    BREAK           reduce using rule 9 (statement -> return .)
    CONTINUE        reduce using rule 9 (statement -> return .)
    GOTO            reduce using rule 9 (statement -> return .)
    ID              reduce using rule 9 (statement -> return .)
    MINUS           reduce using rule 9 (statement -> return .)
    LNOT            reduce using rule 9 (statement -> return .)
    NULL            reduce using rule 9 (statement -> return .)
    LPAREN          reduce using rule 9 (statement -> return .)
    RETURN          reduce using rule 9 (statement -> return .)
    FUNCTION        reduce using rule 9 (statement -> return .)
    STRUCTURE       reduce using rule 9 (statement -> return .)
    WHILE           reduce using rule 9 (statement -> return .)
    DO              reduce using rule 9 (statement -> return .)
    IF              reduce using rule 9 (statement -> return .)
    INTEGER         reduce using rule 9 (statement -> return .)
    DOUBLE          reduce using rule 9 (statement -> return .)
    BOOL            reduce using rule 9 (statement -> return .)
    STRING          reduce using rule 9 (statement -> return .)
    VOID            reduce using rule 9 (statement -> return .)
    DATATYPE        reduce using rule 9 (statement -> return .)
    $end            reduce using rule 9 (statement -> return .)
    RBRACE          reduce using rule 9 (statement -> return .)


state 8

    (10) statement -> assign .

    BREAK           reduce using rule 10 (statement -> assign .)
    CONTINUE        reduce using rule 10 (statement -> assign .)
    GOTO            reduce using rule 10 (statement -> assign .)
    ID              reduce using rule 10 (statement -> assign .)
    MINUS           reduce using rule 10 (statement -> assign .)
    LNOT            reduce using rule 10 (statement -> assign .)
    NULL            reduce using rule 10 (statement -> assign .)
    LPAREN          reduce using rule 10 (statement -> assign .)
    RETURN          reduce using rule 10 (statement -> assign .)
    FUNCTION        reduce using rule 10 (statement -> assign .)
    STRUCTURE       reduce using rule 10 (statement -> assign .)
    WHILE           reduce using rule 10 (statement -> assign .)
    DO              reduce using rule 10 (statement -> assign .)
    IF              reduce using rule 10 (statement -> assign .)
    INTEGER         reduce using rule 10 (statement -> assign .)
    DOUBLE          reduce using rule 10 (statement -> assign .)
    BOOL            reduce using rule 10 (statement -> assign .)
    STRING          reduce using rule 10 (statement -> assign .)
    VOID            reduce using rule 10 (statement -> assign .)
    DATATYPE        reduce using rule 10 (statement -> assign .)
    $end            reduce using rule 10 (statement -> assign .)
    RBRACE          reduce using rule 10 (statement -> assign .)


state 9

    (11) statement -> func_declaration .

    BREAK           reduce using rule 11 (statement -> func_declaration .)
    CONTINUE        reduce using rule 11 (statement -> func_declaration .)
    GOTO            reduce using rule 11 (statement -> func_declaration .)
    ID              reduce using rule 11 (statement -> func_declaration .)
    MINUS           reduce using rule 11 (statement -> func_declaration .)
    LNOT            reduce using rule 11 (statement -> func_declaration .)
    NULL            reduce using rule 11 (statement -> func_declaration .)
    LPAREN          reduce using rule 11 (statement -> func_declaration .)
    RETURN          reduce using rule 11 (statement -> func_declaration .)
    FUNCTION        reduce using rule 11 (statement -> func_declaration .)
    STRUCTURE       reduce using rule 11 (statement -> func_declaration .)
    WHILE           reduce using rule 11 (statement -> func_declaration .)
    DO              reduce using rule 11 (statement -> func_declaration .)
    IF              reduce using rule 11 (statement -> func_declaration .)
    INTEGER         reduce using rule 11 (statement -> func_declaration .)
    DOUBLE          reduce using rule 11 (statement -> func_declaration .)
    BOOL            reduce using rule 11 (statement -> func_declaration .)
    STRING          reduce using rule 11 (statement -> func_declaration .)
    VOID            reduce using rule 11 (statement -> func_declaration .)
    DATATYPE        reduce using rule 11 (statement -> func_declaration .)
    $end            reduce using rule 11 (statement -> func_declaration .)
    RBRACE          reduce using rule 11 (statement -> func_declaration .)


state 10

    (12) statement -> struct_declaration .

    BREAK           reduce using rule 12 (statement -> struct_declaration .)
    CONTINUE        reduce using rule 12 (statement -> struct_declaration .)
    GOTO            reduce using rule 12 (statement -> struct_declaration .)
    ID              reduce using rule 12 (statement -> struct_declaration .)
    MINUS           reduce using rule 12 (statement -> struct_declaration .)
    LNOT            reduce using rule 12 (statement -> struct_declaration .)
    NULL            reduce using rule 12 (statement -> struct_declaration .)
    LPAREN          reduce using rule 12 (statement -> struct_declaration .)
    RETURN          reduce using rule 12 (statement -> struct_declaration .)
    FUNCTION        reduce using rule 12 (statement -> struct_declaration .)
    STRUCTURE       reduce using rule 12 (statement -> struct_declaration .)
    WHILE           reduce using rule 12 (statement -> struct_declaration .)
    DO              reduce using rule 12 (statement -> struct_declaration .)
    IF              reduce using rule 12 (statement -> struct_declaration .)
    INTEGER         reduce using rule 12 (statement -> struct_declaration .)
    DOUBLE          reduce using rule 12 (statement -> struct_declaration .)
    BOOL            reduce using rule 12 (statement -> struct_declaration .)
    STRING          reduce using rule 12 (statement -> struct_declaration .)
    VOID            reduce using rule 12 (statement -> struct_declaration .)
    DATATYPE        reduce using rule 12 (statement -> struct_declaration .)
    $end            reduce using rule 12 (statement -> struct_declaration .)
    RBRACE          reduce using rule 12 (statement -> struct_declaration .)


state 11

    (13) statement -> while .

    BREAK           reduce using rule 13 (statement -> while .)
    CONTINUE        reduce using rule 13 (statement -> while .)
    GOTO            reduce using rule 13 (statement -> while .)
    ID              reduce using rule 13 (statement -> while .)
    MINUS           reduce using rule 13 (statement -> while .)
    LNOT            reduce using rule 13 (statement -> while .)
    NULL            reduce using rule 13 (statement -> while .)
    LPAREN          reduce using rule 13 (statement -> while .)
    RETURN          reduce using rule 13 (statement -> while .)
    FUNCTION        reduce using rule 13 (statement -> while .)
    STRUCTURE       reduce using rule 13 (statement -> while .)
    WHILE           reduce using rule 13 (statement -> while .)
    DO              reduce using rule 13 (statement -> while .)
    IF              reduce using rule 13 (statement -> while .)
    INTEGER         reduce using rule 13 (statement -> while .)
    DOUBLE          reduce using rule 13 (statement -> while .)
    BOOL            reduce using rule 13 (statement -> while .)
    STRING          reduce using rule 13 (statement -> while .)
    VOID            reduce using rule 13 (statement -> while .)
    DATATYPE        reduce using rule 13 (statement -> while .)
    $end            reduce using rule 13 (statement -> while .)
    RBRACE          reduce using rule 13 (statement -> while .)


state 12

    (14) statement -> BREAK . SEMI

    SEMI            shift and go to state 60


state 13

    (15) statement -> CONTINUE . SEMI

    SEMI            shift and go to state 61


state 14

    (16) statement -> GOTO . ID SEMI

    ID              shift and go to state 62


state 15

    (32) expr -> ID . LPAREN args RPAREN
    (78) expr -> ID . LBRACKET expr RBRACKET
    (38) var_declaration -> ID . id EQUALS LBRACE args RBRACE SEMI
    (39) assign -> ID . EQUALS expr SEMI
    (40) assign -> ID . EQUALS LBRACE args RBRACE SEMI
    (41) assign -> ID . DOT ID EQUALS expr SEMI
    (79) goto_mark -> ID . COLON
    (81) id -> ID .
    (81) id -> . ID

    LPAREN          shift and go to state 64
    LBRACKET        shift and go to state 65
    EQUALS          shift and go to state 67
    DOT             shift and go to state 68
    COLON           shift and go to state 69
    SEMI            reduce using rule 81 (id -> ID .)
    PLUS            reduce using rule 81 (id -> ID .)
    MINUS           reduce using rule 81 (id -> ID .)
    MUL             reduce using rule 81 (id -> ID .)
    DIVIDE          reduce using rule 81 (id -> ID .)
    INTDIVIDE       reduce using rule 81 (id -> ID .)
    MODULO          reduce using rule 81 (id -> ID .)
    POW             reduce using rule 81 (id -> ID .)
    LE              reduce using rule 81 (id -> ID .)
    GE              reduce using rule 81 (id -> ID .)
    LT              reduce using rule 81 (id -> ID .)
    GT              reduce using rule 81 (id -> ID .)
    EQ              reduce using rule 81 (id -> ID .)
    NE              reduce using rule 81 (id -> ID .)
    LAND            reduce using rule 81 (id -> ID .)
    LOR             reduce using rule 81 (id -> ID .)
    BAND            reduce using rule 81 (id -> ID .)
    BOR             reduce using rule 81 (id -> ID .)
    ID              shift and go to state 63

    id                             shift and go to state 66

state 16

    (17) statement -> goto_mark .

    BREAK           reduce using rule 17 (statement -> goto_mark .)
    CONTINUE        reduce using rule 17 (statement -> goto_mark .)
    GOTO            reduce using rule 17 (statement -> goto_mark .)
    ID              reduce using rule 17 (statement -> goto_mark .)
    MINUS           reduce using rule 17 (statement -> goto_mark .)
    LNOT            reduce using rule 17 (statement -> goto_mark .)
    NULL            reduce using rule 17 (statement -> goto_mark .)
    LPAREN          reduce using rule 17 (statement -> goto_mark .)
    RETURN          reduce using rule 17 (statement -> goto_mark .)
    FUNCTION        reduce using rule 17 (statement -> goto_mark .)
    STRUCTURE       reduce using rule 17 (statement -> goto_mark .)
    WHILE           reduce using rule 17 (statement -> goto_mark .)
    DO              reduce using rule 17 (statement -> goto_mark .)
    IF              reduce using rule 17 (statement -> goto_mark .)
    INTEGER         reduce using rule 17 (statement -> goto_mark .)
    DOUBLE          reduce using rule 17 (statement -> goto_mark .)
    BOOL            reduce using rule 17 (statement -> goto_mark .)
    STRING          reduce using rule 17 (statement -> goto_mark .)
    VOID            reduce using rule 17 (statement -> goto_mark .)
    DATATYPE        reduce using rule 17 (statement -> goto_mark .)
    $end            reduce using rule 17 (statement -> goto_mark .)
    RBRACE          reduce using rule 17 (statement -> goto_mark .)


state 17

    (18) statement -> if-else .

    BREAK           reduce using rule 18 (statement -> if-else .)
    CONTINUE        reduce using rule 18 (statement -> if-else .)
    GOTO            reduce using rule 18 (statement -> if-else .)
    ID              reduce using rule 18 (statement -> if-else .)
    MINUS           reduce using rule 18 (statement -> if-else .)
    LNOT            reduce using rule 18 (statement -> if-else .)
    NULL            reduce using rule 18 (statement -> if-else .)
    LPAREN          reduce using rule 18 (statement -> if-else .)
    RETURN          reduce using rule 18 (statement -> if-else .)
    FUNCTION        reduce using rule 18 (statement -> if-else .)
    STRUCTURE       reduce using rule 18 (statement -> if-else .)
    WHILE           reduce using rule 18 (statement -> if-else .)
    DO              reduce using rule 18 (statement -> if-else .)
    IF              reduce using rule 18 (statement -> if-else .)
    INTEGER         reduce using rule 18 (statement -> if-else .)
    DOUBLE          reduce using rule 18 (statement -> if-else .)
    BOOL            reduce using rule 18 (statement -> if-else .)
    STRING          reduce using rule 18 (statement -> if-else .)
    VOID            reduce using rule 18 (statement -> if-else .)
    DATATYPE        reduce using rule 18 (statement -> if-else .)
    $end            reduce using rule 18 (statement -> if-else .)
    RBRACE          reduce using rule 18 (statement -> if-else .)


state 18

    (70) expr -> LPAREN . expr RPAREN
    (32) expr -> . ID LPAREN args RPAREN
    (44) expr -> . expr PLUS expr
    (45) expr -> . expr MINUS expr
    (46) expr -> . expr MUL expr
    (47) expr -> . expr DIVIDE expr
    (48) expr -> . expr INTDIVIDE expr
    (49) expr -> . expr MODULO expr
    (50) expr -> . expr POW expr
    (51) expr -> . expr LE expr
    (52) expr -> . expr GE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr GT expr
    (55) expr -> . expr EQ expr
    (56) expr -> . expr NE expr
    (57) expr -> . MINUS expr
    (58) expr -> . expr LAND expr
    (59) expr -> . expr LOR expr
    (60) expr -> . LNOT expr
    (61) expr -> . expr BAND expr
    (62) expr -> . expr BOR expr
    (63) expr -> . id
    (64) expr -> . int
    (65) expr -> . double
    (66) expr -> . bool
    (67) expr -> . str
    (68) expr -> . void
    (69) expr -> . NULL
    (70) expr -> . LPAREN expr RPAREN
    (76) expr -> . datatype LBRACKET RBRACKET id
    (77) expr -> . datatype LBRACKET RBRACKET id EQUALS datatype LBRACKET INTEGER RBRACKET
    (78) expr -> . ID LBRACKET expr RBRACKET
    (81) id -> . ID
    (71) int -> . INTEGER
    (72) double -> . DOUBLE
    (73) bool -> . BOOL
    (74) str -> . STRING
    (75) void -> . VOID
    (80) datatype -> . DATATYPE

    ID              shift and go to state 71
    MINUS           shift and go to state 19
    LNOT            shift and go to state 20
    NULL            shift and go to state 27
    LPAREN          shift and go to state 18
    INTEGER         shift and go to state 29
    DOUBLE          shift and go to state 36
    BOOL            shift and go to state 37
    STRING          shift and go to state 38
    VOID            shift and go to state 39
    DATATYPE        shift and go to state 40

    expr                           shift and go to state 70
    id                             shift and go to state 21
    int                            shift and go to state 22
    double                         shift and go to state 23
    bool                           shift and go to state 24
    str                            shift and go to state 25
    void                           shift and go to state 26
    datatype                       shift and go to state 72

state 19
